implemented modifiers to abilities

--- a/lang/en.json
+++ b/lang/en.json
@@ -222,7 +222,7 @@
 "ME5E.Charges": "Charges",
 "ME5E.ChatContextDamage": "Apply Damage",
 "ME5E.ChatContextHealing": "Apply Healing",
-"DND5E.ChatContextTempHP": "Apply Temporary HP",
+"ME5E.ChatContextTempHP": "Apply Temporary HP",
 "ME5E.ChatContextDoubleDamage": "Apply Double Damage",
 "ME5E.ChatContextHalfDamage": "Apply Half Damage",
 "ME5E.ChatFlavor": "Chat Message Flavor",
@@ -239,7 +239,7 @@
 "ME5E.ClassSkillsChosen": "Chosen Class Skills",
 "ME5E.ComponentSomatic": "Somatic",
 "ME5E.ComponentSomaticAbbr": "S",
-"DND5E.Contents": "Contents",
+"ME5E.Contents": "Contents",
 "ME5E.ConBlinded": "Blinded",
 "ME5E.ConCharmed": "Charmed",
 "ME5E.ConDeafened": "Deafened",
@@ -357,7 +357,7 @@
 "ME5E.Details": "Details",
 "ME5E.Dimensions": "Dimensions",
 "ME5E.Disadvantage": "Disadvantage",
-"DND5E.Disclaimer": "Disclaimer",
+"ME5E.Disclaimer": "Disclaimer",
 "ME5E.DistAny": "Any",
 "ME5E.DistFt": "Feet",
 "ME5E.DistKm": "Kilometers",
@@ -916,8 +916,6 @@
 "SETTINGS.5eDiagN": "Diagonal Movement Rule",
 "SETTINGS.5eDiagPHB": "PHB: Equidistant (5/5/5)",
 "SETTINGS.5eDiagDMG": "DMG: Alternating (5/10/5)",
-"SETTINGS.5eHonorL": "Enable the use of the optional Honor ability score. Requires the world to be reloaded.",
-"SETTINGS.5eHonorN": "Honor Ability Score",
 "SETTINGS.5eInitTBL": "Append the raw Dexterity ability score to break ties in Initiative.",
 "SETTINGS.5eInitTBN": "Initiative Dexterity Tiebreaker",
 "SETTINGS.5eMetricN": "Use Metric Weight Units",
@@ -936,7 +934,5 @@
 "SETTINGS.5eRestPHB": "Player's Handbook (LR: 8 hours, SR: 1 hour)",
 "SETTINGS.5eRestGritty": "Gritty Realism (LR: 7 days, SR: 8 hours)",
 "SETTINGS.5eRestEpic": "Epic Heroism (LR: 1 hour, SR: 1 min)",
-"SETTINGS.5eSanityL": "Enable the use of the optional Sanity ability score. Requires the world to be reloaded.",
-"SETTINGS.5eSanityN": "Sanity Ability Score",
 "SETTINGS.5eUndoChanges": "Undo Changes"
 }
