Started implementing advancement changes
Changing to do all item advancements of the same type at the same time, not to use clones for the advancement process, and to use rules instead of modifying the actor directly

Currently setup for new items, still need to do modifying choices, deleting items, and changing level

--- a/lang/en.json
+++ b/lang/en.json
@@ -108,7 +108,7 @@
 "ME5E.AdvancementHitPointsAverage": "Take Average",
 "ME5E.AdvancementHitPointsEmptyError": "Hit points must be rolled or the average value must be taken.",
 "ME5E.AdvancementHitPointsInvalidError": "Hit points must be a valid whole number.",
-"ME5E.AdvancementHitPointsMaxAtFirstLevel": "Max at 1st Level: <strong>{max}</strong>",
+"ME5E.AdvancementHitPointsMaxAtFirstLevel": "Max at 1st Level",
 "ME5E.AdvancementHitPointsRollMessage": "Roll {class} Hit Points",
 "ME5E.AdvancementHitPointsRollButton": "Roll {die}",
 "ME5E.AdvancementItemGrantTitle": "Grant Items",
@@ -119,6 +119,7 @@
 "ME5E.AdvancementItemGrantOptional": "Optional",
 "ME5E.AdvancementItemGrantOptionalHint": "If optional, players will be given the option to opt out of any of the following items, otherwise all of them are granted.",
 "ME5E.AdvancementItemTypeInvalidWarning": "{type} items cannot be added with this advancement type.",
+"ME5E.AdvancementLevelChangeHeader": "Lvl. {oldLevel} -> Lvl. {newLevel}",
 "ME5E.AdvancementLevelHeader": "Level {level}",
 "ME5E.AdvancementLevelAnyHeader": "Any Level",
 "ME5E.AdvancementLevelNoneHeader": "No Level",
