Implemented interface for adding modifiers, modifier bugfixes

--- a/lang/en.json
+++ b/lang/en.json
@@ -480,6 +480,9 @@
 "ME5E.Healing": "Healing",
 "ME5E.HealingTemp": "Healing (Temporary)",
 "ME5E.HitPoints": "Hit Points",
+"ME5E.HitPointsAbility": "Hit Points Ability",
+"ME5E.HitPointsConfig": "Configure Hit Points",
+"ME5E.HitPointsConfigHint": "Adjust Hit Points skill and bonuses",
 "ME5E.HitPointsCurrent": "Current Hit Points",
 "ME5E.HitPointsMax": "Maximum Hit Points",
 "ME5E.HitPointsTemp": "Temporary Hit Points",
@@ -500,7 +503,7 @@
 "ME5E.Identifier": "Identifier",
 "ME5E.IdentifierError": "Identifier can only contain letters (a-z), numbers (0-9), dashes (-), and underscores (_).",
 "ME5E.InitConfig": "Configure Initiative",
-"ME5E.InitConfigHint": "Adjust initiative skill and bonus",
+"ME5E.InitConfigHint": "Adjust initiative skill and bonuses",
 "ME5E.Initiative": "Initiative",
 "ME5E.InitiativeBonus": "Initiative Bonus",
 "ME5E.Inspiration": "Inspiration",
@@ -586,6 +589,7 @@
 "ME5E.MaxClassLevelExceededWarn": "Class cannot be advanced past level {max}.",
 "ME5E.MaxClassLevelMinimumWarn": "Class must have at least one level.",
 "ME5E.Modifier": "Modifier",
+"ME5E.Modifiers": "Modifiers",
 "ME5E.ModifierCategoryAttribute": "Attribute",
 "ME5E.ModifierCategoryBase": "Base",
 "ME5E.ModifierCategoryClass": "Class",
@@ -593,6 +597,17 @@
 "ME5E.ModifierCategoryEffect": "Effect",
 "ME5E.ModifierCategoryFeat": "Feat",
 "ME5E.ModifierCategoryItem": "Item",
+"ME5E.ModifierConfig": "Modifier Config",
+"ME5E.ModifierConfigPlaceholderName": "Modifier Name",
+"ME5E.ModifierConfigPlaceholderFormula": "Modifier Formula",
+"ME5E.ModifierConfigTitleAdd": "Create Modifier",
+"ME5E.ModifierConfigTitleDelete": "Delete Modifier",
+"ME5E.ModifierNameAbilityBase": "Base Ability Score",
+"ME5E.ModifierErrorNoName": "You cannot add a modifier without a name",
+"ME5E.ModifierErrorDuplicateName": "There's already a modifier with that name",
+"ME5E.ModifierErrorNoFormula": "You cannot add a modifier without a formula",
+"ME5E.ModifierErrorFormulaDice": "A modifier cannot contain dice in it's formula",
+"ME5E.ModifierErrorFormulaError": "Cannot create modifier as the formula produced an error",
 "ME5E.Name": "Character Name",
 "ME5E.NoCharges": "No Charges",
 "ME5E.None": "None",
