Initial changes to config, removed polymorphing

--- a/lang/en.json
+++ b/lang/en.json
@@ -306,6 +306,11 @@
 "ME5E.ArmorConfigHint": "Fill in the above box to override automatically calculated armor class.",
 "ME5E.ArmorClassCalculation": "Calculation",
 "ME5E.ArmorClassFormula": "Formula",
+"ME5E.ArmorPlacementArms": "Arms",
+"ME5E.ArmorPlacementBody": "Body",
+"ME5E.ArmorPlacementChest": "Chest",
+"ME5E.ArmorPlacementHead": "Head",
+"ME5E.ArmorPlacementLegs": "Legs",
 "ME5E.AC": "AC",
 "ME5E.Attack": "Attack",
 "ME5E.AttackPl": "Attacks",
@@ -397,20 +402,30 @@
 "ME5E.ContextMenuActionDisable": "Disable",
 "ME5E.ConBlinded": "Blinded",
 "ME5E.ConCharmed": "Charmed",
+"ME5E.ConConcentrating": "Concentrating",
 "ME5E.ConDeafened": "Deafened",
 "ME5E.ConDiseased": "Diseased",
 "ME5E.ConExhaustion": "Exhaustion",
 "ME5E.ConFrightened": "Frightened",
+"ME5E.ConFrozen": "Frozen",
 "ME5E.ConGrappled": "Grappled",
 "ME5E.ConImm": "Condition Immunities",
 "ME5E.ConIncapacitated": "Incapacitated",
+"ME5E.ConIndoctrinated": "Indoctrinated",
 "ME5E.ConInvisible": "Invisible",
+"ME5E.ConLifted": "Lifted",
 "ME5E.ConParalyzed": "Paralyzed",
-"ME5E.ConPetrified": "Petrified",
 "ME5E.ConPoisoned": "Poisoned",
+"ME5E.ConPrimedCold": "Primed (Cold)",
+"ME5E.ConPrimedFire": "Primed (Fire)",
+"ME5E.ConPrimedForce": "Primed (Force)",
+"ME5E.ConPrimedLightning": "Primed (Lightning)",
+"ME5E.ConPrimedNecrotic": "Primed (Necrotic)",
+"ME5E.ConPrimedRadiant": "Primed (Radiant)",
 "ME5E.ConProne": "Prone",
 "ME5E.ConRestrained": "Restrained",
 "ME5E.ConStunned": "Stunned",
+"ME5E.ConTargeting": "Targeting",
 "ME5E.ConUnconscious": "Unconscious",
 "ME5E.Concentration": "Concentration",
 "ME5E.ConcentrationAbbr": "C",
@@ -432,13 +447,12 @@
 "ME5E.ConsumeResource": "Consume Resource?",
 "ME5E.ConsumeRecharge": "Consume Recharge?",
 "ME5E.ConsumableAmmo": "Ammunition",
-"ME5E.ConsumableFood": "Food",
-"ME5E.ConsumablePoison": "Poison",
-"ME5E.ConsumablePotion": "Potion",
-"ME5E.ConsumableRod": "Rod",
-"ME5E.ConsumableScroll": "Scroll",
-"ME5E.ConsumableTrinket": "Trinket",
-"ME5E.ConsumableWand": "Wand",
+"ME5E.ConsumableDevice": "Device",
+"ME5E.ConsumableGrenade": "Grenade",
+"ME5E.ConsumableHeal": "Healing Item",
+"ME5E.ConsumableHvyWeap": "Heavy Weapon",
+"ME5E.ConsumableMat": "Material",
+"ME5E.ConsumableOmni": "Omni-tool Program",
 "ME5E.ConsumableUseWarnStart": "This consumable has",
 "ME5E.ConsumableUseWarnEnd": "of the current unit",
 "ME5E.ConsumableUnitWarn": "units remaining",
@@ -450,32 +464,12 @@
 "ME5E.CoverThreeQuarters": "Three Quarters",
 "ME5E.CoverTotal": "Total",
 "ME5E.CostGP": "Cost (GP)",
-"ME5E.CreatureAberration": "Aberration",
-"ME5E.CreatureAberrationPl": "Aberrations",
-"ME5E.CreatureBeast": "Beast",
-"ME5E.CreatureBeastPl": "Beasts",
-"ME5E.CreatureCelestial": "Celestial",
-"ME5E.CreatureCelestialPl": "Celestials",
-"ME5E.CreatureConstruct": "Construct",
-"ME5E.CreatureConstructPl": "Constructs",
-"ME5E.CreatureDragon": "Dragon",
-"ME5E.CreatureDragonPl": "Dragons",
-"ME5E.CreatureElemental": "Elemental",
-"ME5E.CreatureElementalPl": "Elementals",
-"ME5E.CreatureFey": "Fey",
-"ME5E.CreatureFeyPl": "Fey",
-"ME5E.CreatureFiend": "Fiend",
-"ME5E.CreatureFiendPl": "Fiends",
-"ME5E.CreatureGiant": "Giant",
-"ME5E.CreatureGiantPl": "Giants",
-"ME5E.CreatureHumanoid": "Humanoid",
-"ME5E.CreatureHumanoidPl": "Humanoids",
-"ME5E.CreatureMonstrosity": "Monstrosity",
-"ME5E.CreatureMonstrosityPl": "Monstrosities",
-"ME5E.CreatureOoze": "Ooze",
-"ME5E.CreatureOozePl": "Oozes",
-"ME5E.CreaturePlant": "Plant",
-"ME5E.CreaturePlantPl": "Plants",
+"ME5E.CreatureOrganic": "Organic",
+"ME5E.CreatureOrganicPl": "Organics",
+"ME5E.CreatureSynthetic": "Synthetic",
+"ME5E.CreatureSyntheticPl": "Synthetics",
+"ME5E.CreatureSynthOrganic": "Synth-organic",
+"ME5E.CreatureSynthOrganicPl": "Synth-organics",
 "ME5E.CreatureType": "Creature Type",
 "ME5E.CreatureTypeTitle": "Configure Creature Type",
 "ME5E.CreatureSwarm": "Swarm",
@@ -484,25 +478,13 @@
 "ME5E.CreatureTypeConfig": "Configure Creature Type",
 "ME5E.CreatureTypeSelectorCustom": "Custom Type",
 "ME5E.CreatureTypeSelectorSubtype": "Subtype",
-"ME5E.CreatureUndead": "Undead",
-"ME5E.CreatureUndeadPl": "Undead",
 "ME5E.Crewed": "Crewed",
 "ME5E.Critical": "Critical",
 "ME5E.CriticalHit": "Critical Hit",
 "ME5E.PowerfulCritical": "Powerful Critical",
 "ME5E.Currency": "Currency",
-"ME5E.CurrencyAbbrCP": "cp",
-"ME5E.CurrencyAbbrEP": "ep",
-"ME5E.CurrencyAbbrGP": "gp",
-"ME5E.CurrencyAbbrPP": "pp",
-"ME5E.CurrencyAbbrSP": "sp",
-"ME5E.CurrencyCP": "Copper",
-"ME5E.CurrencyConvert": "Convert All Currency",
-"ME5E.CurrencyConvertHint": "Convert all carried currency to the highest possible denomination to reduce the amount of coinage carried by the character. Be wary, this action cannot be undone.",
-"ME5E.CurrencyEP": "Electrum",
-"ME5E.CurrencyGP": "Gold",
-"ME5E.CurrencyPP": "Platinum",
-"ME5E.CurrencySP": "Silver",
+"ME5E.CurrencyAbbrCR": "cr",
+"ME5E.CurrencyCR": "Credits",
 "ME5E.DamImm": "Damage Immunities",
 "ME5E.DamRes": "Damage Resistances",
 "ME5E.DamVuln": "Damage Vulnerabilities",
@@ -608,9 +590,7 @@
 "ME5E.ItemRarityCommon": "common",
 "ME5E.ItemRarityUncommon": "uncommon",
 "ME5E.ItemRarityRare": "rare",
-"ME5E.ItemRarityVeryRare": "very rare",
-"ME5E.ItemRarityLegendary": "legendary",
-"ME5E.ItemRarityArtifact": "artifact",
+"ME5E.ItemRaritySpectre": "Spectre",
 "ME5E.ItemNoUses": "{name} has no available uses remaining.",
 "ME5E.FeatureActive": "Active Abilities",
 "ME5E.FeatureAdd": "Create Feature",
@@ -852,40 +832,6 @@
 "ME5E.PersonalityTraits": "Personality Traits",
 "ME5E.PlaceTemplate": "Place Measured Template",
 "ME5E.PlaceTemplateError": "Failed to place measured template",
-"ME5E.Polymorph": "Polymorph",
-"ME5E.PolymorphAcceptSettings": "Custom Settings",
-"ME5E.PolymorphCustomTransformation": "Custom Transformation",
-"ME5E.PolymorphEffectTransformation": "Effect Transformation",
-"ME5E.PolymorphKeepAE": "Keep all effects (overrides other effect retention options).",
-"ME5E.PolymorphKeepBackgroundAE": "Keep effects that originate from your background?",
-"ME5E.PolymorphKeepBio": "Keep biography",
-"ME5E.PolymorphKeepClass": "Keep proficiency bonus (leaves class items in sheet)",
-"ME5E.PolymorphKeepClassAE": "Keep effects that originate from your class or subclass?",
-"ME5E.PolymorphKeepEquipmentAE": "Keep effects that originate from your equipment?",
-"ME5E.PolymorphKeepFeats": "Keep features",
-"ME5E.PolymorphKeepFeatureAE": "Keep effects that originate from your features?",
-"ME5E.PolymorphKeepItems": "Keep equipment",
-"ME5E.PolymorphKeepMental": "Keep mental ability scores (Int, Wis, Cha)",
-"ME5E.PolymorphKeepOriginAE": "Keep effects that originate from this actor (i.e. effects not attached to features, items, spells)",
-"ME5E.PolymorphKeepOtherOriginAE": "Keep effects that originate from a different actor?",
-"ME5E.PolymorphKeepPhysical": "Keep physical ability scores (Str, Dex, Con)",
-"ME5E.PolymorphKeepSaves": "Keep saving throw proficiencies",
-"ME5E.PolymorphKeepSelf": "Keep self (just change image and size i.e. for spells like Disguise Self)",
-"ME5E.PolymorphKeepSkills": "Keep skill proficiencies",
-"ME5E.PolymorphKeepSpellAE": "Keep effects that originate from your spells?",
-"ME5E.PolymorphKeepSpells": "Keep spells",
-"ME5E.PolymorphKeepVision": "Keep vision (character and token)",
-"ME5E.PolymorphMergeSaves": "Merge saving throw proficiencies (take the highest)",
-"ME5E.PolymorphMergeSkills": "Merge skill proficiencies (take the highest)",
-"ME5E.PolymorphPromptTitle": "Transforming Actor",
-"ME5E.PolymorphRestoreTransformation": "Restore Transformation",
-"ME5E.PolymorphRevertNoOriginalActorWarn": "No original actor was found with reference '{reference}'",
-"ME5E.PolymorphRevertWarn": "You do not have permission to revert this Actor's polymorphed state.",
-"ME5E.PolymorphSelf": "Appearance Only",
-"ME5E.PolymorphTmpClass": "Temporary Class",
-"ME5E.PolymorphTokens": "Transform all linked tokens?",
-"ME5E.PolymorphWarn": "You are not allowed to polymorph this actor!",
-"ME5E.PolymorphWildShape": "Wild Shape",
 "ME5E.Prepared": "Prepared",
 "ME5E.Price": "Price",
 "ME5E.Proficiency": "Proficiency",
@@ -976,6 +922,12 @@
 "ME5E.SchoolIll": "Illusion",
 "ME5E.SchoolNec": "Necromancy",
 "ME5E.SchoolTrs": "Transmutation",
+"ME5E.ShipSystemDrive": "Drive",
+"ME5E.ShipSystemEws": "Electronic Warfare System",
+"ME5E.ShipSystemHelm": "Helm",
+"ME5E.ShipSystemNav": "Navigation",
+"ME5E.ShipSystemSsc": "SSC",
+"ME5E.ShipSystemWeapons": "Weapons",
 "ME5E.ShortRest": "Short Rest",
 "ME5E.ShortRestNormal": "Short Rest (1 hour)",
 "ME5E.ShortRestGritty": "Short Rest (8 hours)",
@@ -996,23 +948,23 @@
 "ME5E.SizeTiny": "Tiny",
 "ME5E.Skills": "Skills",
 "ME5E.SkillAcr": "Acrobatics",
-"ME5E.SkillAni": "Animal Handling",
-"ME5E.SkillArc": "Arcana",
 "ME5E.SkillAth": "Athletics",
 "ME5E.SkillDec": "Deception",
+"ME5E.SkillEle": "Electronics",
+"ME5E.SkillEng": "Engineering",
 "ME5E.SkillHis": "History",
 "ME5E.SkillIns": "Insight",
 "ME5E.SkillInv": "Investigation",
 "ME5E.SkillItm": "Intimidation",
 "ME5E.SkillMed": "Medicine",
-"ME5E.SkillNat": "Nature",
 "ME5E.SkillPer": "Persuasion",
 "ME5E.SkillPrc": "Perception",
 "ME5E.SkillPrf": "Performance",
-"ME5E.SkillRel": "Religion",
+"ME5E.SkillSci": "Science",
 "ME5E.SkillSlt": "Sleight of Hand",
 "ME5E.SkillSte": "Stealth",
 "ME5E.SkillSur": "Survival",
+"ME5E.SkillVeh": "Vehicle Handling",
 "ME5E.SkillPromptTitle": "{skill} Skill Check",
 "ME5E.SkillConfigureTitle": "Configure {skill}",
 "ME5E.SkillConfigure": "Configure Skill",
@@ -1225,32 +1177,40 @@
 "ME5E.WarnCantAddMultipleAdvancements": "It is not currently possible to add multiple items with advancements to an actor at the same time. Please add them individually.",
 "ME5E.WarnMultipleArmor": "More than one suit of armor equipped, AC calculation may be incorrect.",
 "ME5E.WarnMultipleShields": "More than one shield equipped, AC calculation may be incorrect.",
+"ME5E.WeaponAssault": "Assault Rifle",
+"ME5E.WeaponAssaultProficiency": "Assault Rifles",
 "ME5E.WeaponImprov": "Improvised",
-"ME5E.WeaponMartialM": "Martial Melee",
-"ME5E.WeaponMartialProficiency": "Martial Weapons",
-"ME5E.WeaponMartialR": "Martial Ranged",
+"ME5E.WeaponMelee": "Melee",
+"ME5E.WeaponMeleeProficiency": "Melee Weapons",
 "ME5E.WeaponNatural": "Natural",
-"ME5E.WeaponPropertiesAda": "Adamantine",
-"ME5E.WeaponPropertiesAmm": "Ammunition",
+"ME5E.WeaponPistol": "Heavy Pistol",
+"ME5E.WeaponPistolProficiency": "Heavy Pistols",
+"ME5E.WeaponPropertiesArc": "Arc",
+"ME5E.WeaponPropertiesBst": "Burst",
+"ME5E.WeaponPropertiesDbl": "Double Tap",
 "ME5E.WeaponPropertiesFin": "Finesse",
-"ME5E.WeaponPropertiesFir": "Firearm",
-"ME5E.WeaponPropertiesFoc": "Focus",
+"ME5E.WeaponPropertiesHet": "Heat",
+"ME5E.WeaponPropertiesHip": "Hip Fire",
 "ME5E.WeaponPropertiesHvy": "Heavy",
 "ME5E.WeaponPropertiesLgt": "Light",
-"ME5E.WeaponPropertiesLod": "Loading",
+"ME5E.WeaponPropertiesMel": "Melee",
 "ME5E.WeaponPropertiesMgc": "Magical",
-"ME5E.WeaponPropertiesRch": "Reach",
-"ME5E.WeaponPropertiesRel": "Reload",
-"ME5E.WeaponPropertiesRet": "Returning",
-"ME5E.WeaponPropertiesSil": "Silvered",
+"ME5E.WeaponPropertiesRan": "Range",
+"ME5E.WeaponPropertiesRec": "Recoil",
+"ME5E.WeaponPropertiesSil": "Silent",
 "ME5E.WeaponPropertiesSpc": "Special",
 "ME5E.WeaponPropertiesThr": "Thrown",
 "ME5E.WeaponPropertiesTwo": "Two-Handed",
+"ME5E.WeaponPropertiesVen": "Vented",
 "ME5E.WeaponPropertiesVer": "Versatile",
+"ME5E.WeaponPropertiesWei": "Weight",
+"ME5E.WeaponShotgun": "Shotgun",
+"ME5E.WeaponShotgunProficiency": "Shotguns",
 "ME5E.WeaponSiege": "Siege Weapon",
-"ME5E.WeaponSimpleM": "Simple Melee",
-"ME5E.WeaponSimpleProficiency": "Simple Weapons",
-"ME5E.WeaponSimpleR": "Simple Ranged",
+"ME5E.WeaponSmg": "Sub-machine Gun",
+"ME5E.WeaponSmgProficiency": "Sub-machine Guns",
+"ME5E.WeaponSniper": "Sniper Rifle",
+"ME5E.WeaponSniperProficiency": "Sniper Rifles",
 "ME5E.Weight": "Weight",
 "ME5E.available": "available",
 "ME5E.description": "A system for playing the fifth edition of the worlds most popular roleplaying game in the Foundry Virtual Tabletop environment.",
@@ -1303,8 +1263,6 @@
 "MIGRATION.5eComplete": "ME5E System Migration to version {version} completed!",
 "MIGRATION.5eVersionTooOldWarning": "Your ME5e system data is from too old a Foundry version and cannot be reliably migrated to the latest version. The process will be attempted, but errors may occur.",
 
-"SETTINGS.5eAllowPolymorphingL": "Allow players to polymorph their own actors.",
-"SETTINGS.5eAllowPolymorphingN": "Allow Polymorphing",
 "SETTINGS.5eAutoCollapseCardL": "Automatically collapse Item Card descriptions in the Chat Log",
 "SETTINGS.5eAutoCollapseCardN": "Collapse Item Cards in Chat",
 "SETTINGS.5eAutoSpellTemplateL": "When a spell is cast, defaults to begin the process to create the corresponding Measured Template if any (requires TRUSTED or higher player role)",
