--- a/lang/en.json
+++ b/lang/en.json
@@ -3940,42 +3940,47 @@
   }
 },
 
-"ME5E.Skill": "Skill",
-"ME5E.Skills": "Skills",
-"ME5E.SkillAcr": "Acrobatics",
-"ME5E.SkillAni": "Animal Handling",
-"ME5E.SkillArc": "Arcana",
-"ME5E.SkillAth": "Athletics",
-"ME5E.SkillDec": "Deception",
-"ME5E.SkillHis": "History",
-"ME5E.SkillIns": "Insight",
-"ME5E.SkillInv": "Investigation",
-"ME5E.SkillItm": "Intimidation",
-"ME5E.SkillMed": "Medicine",
-"ME5E.SkillNat": "Nature",
-"ME5E.SkillPer": "Persuasion",
-"ME5E.SkillPrc": "Perception",
-"ME5E.SkillPrf": "Performance",
-"ME5E.SkillRel": "Religion",
-"ME5E.SkillSlt": "Sleight of Hand",
-"ME5E.SkillSte": "Stealth",
-"ME5E.SkillSur": "Survival",
-"ME5E.SkillRoll": "Roll {ability} ({skill}) Check",
-"ME5E.SkillTitle": "{ability} ({skill})",
-"ME5E.SkillPromptTitle": "{ability} ({skill}) Check",
-"ME5E.SkillConfigureTitle": "Configure {skill}",
-"ME5E.SkillConfigure": "Configure Skill",
-"ME5E.SkillsConfig": "Configure Skills",
-"ME5E.SkillBonuses": "Skill Bonuses",
-"ME5E.SkillBonusCheck": "Check Bonus",
-"ME5E.SkillBonusPassive": "Passive Bonus",
-"ME5E.SkillConfigurationHint": "Configure skill proficiency and bonuses.",
-"ME5E.SkillGlobalBonusCheckHint": "This bonus applies to all skill checks made by this actor.",
-"ME5E.SkillModifierHint": "{skill} Modifier",
-"ME5E.SkillPassiveHint": "Passive {skill}",
-"ME5E.SkillPassiveSpecificHint": "Passive {ability} ({skill})",
-"ME5E.SkillPassiveScore": "Passive {skill} Score",
-"ME5E.SkillPassives": "Skill Passives",
+"ME5E.Skill": {
+  "Label": "Skill",
+  "LabelPl": "Skills",
+  "Acr": "Acrobatics",
+  "Ath": "Athletics",
+  "Dec": "Deception",
+  "Ele": "Electronics",
+  "Eng": "Engineering",
+  "His": "History",
+  "Ins": "Insight",
+  "Inv": "Investigation",
+  "Itm": "Intimidation",
+  "Med": "Medicine",
+  "Nat": "Nature",
+  "Per": "Persuasion",
+  "Prc": "Perception",
+  "Prf": "Performance",
+  "Sci": "Science",
+  "Slt": "Sleight of Hand",
+  "Ste": "Stealth",
+  "Sur": "Survival",
+  "Veh": "Vehicle Handling",
+
+  "Roll": "Roll {ability} ({skill}) Check",
+  "Title": "{ability} ({skill})",
+  "PromptTitle": "{ability} ({skill}) Check",
+  "ConfigureTitle": "Configure {skill}",
+  "Configure": "Configure Skill",
+  "ConfigurePl": "Configure Skills",
+  "Bonuses": "Skill Bonuses",
+  "BonusCheck": "Check Bonus",
+  "BonusPassive": "Passive Bonus",
+  "ConfigurationHint": "Configure skill proficiency and bonuses.",
+  "GlobalBonusCheckHint": "This bonus applies to all skill checks made by this actor.",
+  "ModifierHint": "{skill} Modifier",
+  "PassiveHint": "Passive {skill}",
+  "PassiveSpecificHint": "Passive {ability} ({skill})",
+  "PassiveScore": "Passive {skill} Score",
+  "Passives": "Skill Passives"
+},
+
 "ME5E.Skin": "Skin",
 "ME5E.Skip": "Skip",
 
